Minor changes and additions to FileUtils.